--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {},
-  "peerDependencies": {
-  },
+  "peerDependencies": {},
   "deprecated": false,
   "description": "Social Signin with Twitter",
   "engines": {
@@ -19,10 +18,18 @@
     "authentication"
   ],
   "license": "MIT",
-  "name": "react-native-twitter-signin",
+  "name": "@ducdh-origin/react-native-twitter-signin",
   "repository": {
     "type": "git",
-    "url": "https://github.com/GoldenOwlAsia/react-native-twitter-signin"
+    "url": "git+https://github.com/ducdh-fabbi/react-native-twitter-signin.git"
   },
-  "version": "1.1.0"
+  "version": "0.0.1",
+  "bugs": {
+    "url": "https://github.com/GoldenOwlAsia/react-native-twitter-signin/issues"
+  },
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "GoldenOwlAsia"
 }
